# solar_tracker

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  calc.c  calc_lib.c  calc_lib.h  general.c
ctest/: CMakeLists.txt  addvalues_zero.c
inc/: main.h  stm32c0xx_it.h
src/: CMakeLists.txt  calc_lib.c  main.c  rotary_encoder.c  stm32c0xx_it.c
